Whats new in this version:
- Added help to the menu.
- Moved clear cache into settings.
- Gave proper attribution to Johno Crawford. (helped fixed a critical bug!)
- Changed project setup for easier building. (Maven/IntelliJ IDEA)

Whats new in version 2.2.1:
- Fixed a weird bug that would intermittently crash SickStache.
- Moved History from the menu to the Home Activity.
- Added missing SickBeard Status (Thanks to Johno Crawford for the provided patch).
- Support for SickBeard "Flatten Folders" option.

Whats new in version 2.2:
- No more refreshing on screen rotation.
- Upated About activity with proper attribution to libraries used.

Whats new in version 2.1.3:
- Fixed a series of bugs on screen rotation.

Whats new in version 2.1.2:
- Added many more error messages to make debugging and error reports better.
- Fixed a problem when fetching a banner that caused it to never be saved.
- Startup should be slightly faster.

Whats new in version 2.1.1:
- Fixed crash on Android 4.1
- Fixed crash on Android 2.2
- Fixed problem when loading an image that doesnt exist

Whats new in version 2.1:
- New Banner Cache (Clear your Cache first)
- Clicking an item in the History now opens the Episode View
- Error messages are now displayed in views
- Whats New? dialog
- What's New? menu item

Whats new in version 2.0.2:
- Added Delete Show to Edit Show Activity
- Added Extra Path for people using multiple services on one port

Whats new in version 2.0.1
- Fixed a problem with Add Show (sorry)

Whats new in version 2.0
- Updated Add Show View
- Fixed Add Show bug
- Mass show edits
- Mass set episode status
- Added Search Language
- Updated Quality Dialog
- Finally added About Activity :)
- Fixed spelling mistake

Whats new in version 1.4
- Updated History View
- Options now available for Add Show
- Edit Show options (accessed though menu/actionbar after selecting a show)
- Updated widgets for options
- Sort by Name/Relevance/Year added to Add Show search