@@ -2,6 +2,7 @@
 bin
 gen
 lint.xml
+*.apk
 
 #Eclipse
 .project
