@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="org.sickstache"
-    android:versionCode="43"
-    android:versionName="2.2.2" >
+    android:versionCode="44"
+    android:versionName="2.2.3" >
 
     <uses-sdk android:minSdkVersion="8" android:targetSdkVersion="15" />
     <uses-permission android:name="android.permission.INTERNET" />
