@@ -1,4 +1,7 @@
 Whats new in this version:
+- Updated the snatched color to the current purple in Sickbeard.
+
+Whats new in version 2.2.2:
 - Added help to the menu.
 - Moved clear cache into settings.
 - Gave proper attribution to Johno Crawford. (helped fixed a critical bug!)
